--- a/css/style.css
+++ b/css/style.css
@@ -20,5 +20,8 @@ body {
 }
 
 .container {
+  -webkit-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
+  -moz-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
   background: #fff;
 }
