--- a/css/grid.css
+++ b/css/grid.css
@@ -5,7 +5,7 @@
   flex-direction: column;
 }
 
-.sidebar {
+aside {
   flex: 1;
 }
 
@@ -13,21 +13,20 @@
   display: none;
 }
 
-.sidebar-menu section,
+.sidebar-menu nav,
 .sidebar-menu a {
   display: block;
   width: 100%;
   padding: 5px 10px;
 }
 
-.content {
+main {
   flex: 5;
 }
 
 .logo {
   text-align: center;
   flex: 1;
-  width: 270px;
   margin: auto;
   align-content: center;
 }
@@ -69,9 +68,8 @@
 }
 
 footer {
-  border: 1px solid royalblue;
   margin: auto;
-  width: 600px;
+  width: 100%;
 }
 
 
@@ -79,7 +77,7 @@ footer {
 @media screen and (min-width: 1200px) {
 
   .container { width: 1200px; }
-  footer { }
+  footer { width: 1200px; }
 
 }
 
@@ -98,7 +96,5 @@ footer {
   header { flex-direction: row; }
   
   .menu {  }
-
-  footer { width: 600px; }
 
 }
