--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,9 @@ body {
   box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
   background: #fff;
 }
+
+.logo a:hover { opacity: .75; }
+
+footer {
+  background-color: #fff;
+}
