--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+* {
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	-ms-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+
 body {
   font-family: 'PT Sans', sans-serif;
   font-size: 18px;
