--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,25 @@
 * {
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+	-webkit-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
+	-ms-transition: all 0.2s ease;
+	transition: all 0.2s ease;
 }
 
 body {
   font-family: 'PT Sans', sans-serif;
-  font-size: 18px;
+  font-size: 16px;
   background-color: #fff;
   background-image: url(../img/Keiths-Comics.jpg);
   background-repeat: repeat-y;
   background-position: center center;
   background-size: cover;
   color: #000;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .light {
@@ -35,6 +40,35 @@ body {
 }
 
 .logo a:hover { opacity: .75; }
+
+.product:hover img { opacity: .75; }
+
+.price {
+  font-weight: bold;
+  color: #EE8F00;
+}
+
+.product p {
+  color: #3E3E3E;
+}
+
+.addtocart {
+  background-color: #FFC130;
+  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.25);
+}
+
+.addtocart:hover { background-color: #FFB300; }
+
+.addtocart:active {
+  position: relative;
+  background-color: #ECA600;
+  top: 3px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
 
 footer {
   background-color: #fff;
