--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-* {
-	-webkit-transition: all 0.2s ease;
-	-moz-transition: all 0.2s ease;
-	-o-transition: all 0.2s ease;
-	-ms-transition: all 0.2s ease;
-	transition: all 0.2s ease;
-}
-
 body {
   font-family: 'PT Sans', sans-serif;
   font-size: 16px;
@@ -39,9 +31,17 @@ a {
   background: #fff;
 }
 
-.logo a:hover { opacity: .75; }
+.logo a:hover {
+  -webkit-filter: hue-rotate(90deg);
+}
 
-.product:hover img { opacity: .75; }
+.sidebar-menu a:hover {
+  background-color: #EE8F00;
+}
+
+.product:hover img {
+  -webkit-filter: hue-rotate(180deg); /* saturate(150%) */
+}
 
 .price {
   font-weight: bold;
