--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ a {
 }
 
 .product:hover img {
-  -webkit-filter: hue-rotate(180deg); /* saturate(150%) */
+  -webkit-filter: /* hue-rotate(180deg) */ saturate(150%);
 }
 
 .price {
