--- a/css/grid.css
+++ b/css/grid.css
@@ -23,10 +23,10 @@ aside {
   padding: 10px 0;
 }
 
-.sidebar-menu span {
-  margin-left: 10px;
-  color: #fff;
-}
+.sidebar-menu span { margin-left: 40px; }
+
+.first-light-sidebar-item span,
+.first-dark-sidebar-item span { margin-left: 20px; }
 
 main {
   flex: 5;
@@ -44,7 +44,6 @@ main {
 }
 
 .header {
-  flex: 5;
   justify-content: center;
   flex-wrap: wrap;
   min-height: 100px;
@@ -55,6 +54,7 @@ main {
 .header-item {
   flex: 1;
   justify-content: center;
+  align-items: center;
 }
 
 .breadcrumbs {
@@ -139,7 +139,17 @@ main {
 footer {
   margin: auto;
   width: 100%;
+  flex-direction: column;
 }
+
+footer div {
+  height: 90px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+footer div { flex: 1; }
 
 
 
@@ -165,5 +175,12 @@ footer {
   header { flex-direction: row; }
   
   .menu {  }
+
+  footer { flex-direction: row; }
+
+  footer div:first-child {
+    width: 237px;
+    flex: none;
+  }
 
 }
