final sreda fixes

--- a/css/grid.css
+++ b/css/grid.css
@@ -92,7 +92,7 @@ main {
   float: right;
   margin: 5px 20px 5px 0;
   padding: 10px;
-  color: #D1D1D1;
+  color: var(--color-gray);
   border: 1px solid #D2D2D2;
   border-radius: 50px;
 }
