--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@ a {
 .light,
 .dark { color: var(--color-white); }
 
+.attencion-link {
+  font-size: 16px;
+  display: block;
+}
+
 .container {
   -webkit-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
