--- a/css/grid.css
+++ b/css/grid.css
@@ -64,6 +64,8 @@ main { flex: 5; }
 .header div:first-child { flex: 3; }
 .header div:nth-child(2) { flex: 2; }
 
+.header span img { padding-left: 10px; }
+
 .header-item span { display: block; }
 
 .header-item:first-child span:first-child { font-size: 20px; }
@@ -167,12 +169,13 @@ footer div {
 
 footer div { flex: 1; }
 
-footer p a {
-  padding: 5px;
-  margin: 5px;
+footer p a,
+.header span { margin: 5px; }
+
+footer a {
+  display: inline-block;
+  text-align: center;
 }
-
-
 
 
 @media screen and (min-width: 1200px) {
