--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,8 @@ a {
   display: block;
 }
 
+.bold { font-weight: bold; }
+
 .container {
   -webkit-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
   -moz-box-shadow: 0px 0px 100px 0px rgba(0,0,0,0.5);
