margin, transition, img paths fixes

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 a,
 span,
-img { transition: .2s; }
+img { transition: .15s; }
 
 :root {
   --color-black: #07161e;
@@ -69,6 +69,8 @@ a {
   color: var(--color-white);
   font-weight: bold;
 }
+
+.product img { border: 1px solid var(--color-gray); }
 
 .product:hover img { -webkit-filter: saturate(150%); }
 
