--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,5 @@ footer a:hover { text-decoration: underline; }
 
 /*
   TODO:
-    - снять транзишны со всего
-      и навесить на отдельные элементы,
-      ибо пиздец пидорасит страницу при загрузке
+    - сатурэйт сделать классом и навесить на все img
 */
