--- a/css/grid.css
+++ b/css/grid.css
@@ -63,7 +63,7 @@ main { flex: 5; }
 .header div:first-child { flex: 3; }
 .header div:nth-child(2) { flex: 2; }
 
-.header span img { padding-left: 10px; }
+.header span img { padding-left: 10px; max-height: 14px; }
 
 .header-item span { display: block; }
 
@@ -103,14 +103,14 @@ main { flex: 5; }
 
 .search-form {
   flex: 1;
-  width: 170px;
+  width: 250px;
   height: 30px;
   float: right;
   margin: 5px 20px 5px 0;
   padding: 10px;
   color: var(--color-gray);
   border: 1px solid #D2D2D2;
-  border-radius: 50px;
+  border-radius: 10px;
 }
 
 .products-row {
@@ -127,10 +127,10 @@ main { flex: 5; }
   text-align: center;
 }
 
-.product img {
-  width: 150px;
-  border-radius: 6px;
-}
+.product img,
+.product-page img { border-radius: 6px; }
+
+.product img { width: 150px; }
 
 .product p {
   padding: 5px;
