--- a/css/grid.css
+++ b/css/grid.css
@@ -104,14 +104,14 @@ footer img { max-height: 14px; }
 
 .search-form {
   flex: 1;
-  width: 250px;
+  width: 100%;
   height: 30px;
-  float: right;
   margin: 5px 20px 5px 0;
   padding: 10px;
   color: var(--color-gray);
   border: 1px solid #D2D2D2;
   border-radius: 10px;
+  display: inline-block;
 }
 
 .products-row {
@@ -221,6 +221,16 @@ footer a {
   footer div:first-child {
     width: 237px;
     flex: none;
+  }
+
+}
+
+@media screen and (min-width: 650px) {
+
+  .search-form {
+    float: right;
+    width: 250px;
+    margin: 5px 20px 5px 0;
   }
 
 }
