--- a/css/grid.css
+++ b/css/grid.css
@@ -106,7 +106,7 @@ footer img { max-height: 14px; }
   flex: 1;
   width: 100%;
   height: 30px;
-  margin: 5px 20px 5px 0;
+  margin: 5px 0;
   padding: 10px;
   color: var(--color-gray);
   border: 1px solid #D2D2D2;
@@ -188,6 +188,7 @@ footer a {
 .recommended-products {
   display: none;
 }
+
 
 
 @media screen and (min-width: 1200px) {
