--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+/*   
+Theme Name: gctheme
+Theme URI: gotcomics.ru
+Description: Wordpress theme for comics shop named GotComics & placed in Ekaterinburg, Russia.
+Author: nklnke
+Author URI: nklnke.github.io
+*/
+
 a,
 span,
 img { transition: .15s; }
@@ -15,7 +23,7 @@ body {
   font-family: 'PT Sans', sans-serif;
   font-size: 16px;
   background-color: #fff;
-  background: url(../img/gc-icons2.png) center top repeat;
+  background: url(img/gc-icons2.png) center top repeat;
   color: var(--color-black);
 }
 
