Revert "woocommerce.php lil progress"
This reverts commit 656678d055f93aa43b22756cf4860028691bdf2a.

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
   font-family: 'PT Sans', sans-serif;
   font-size: 16px;
   background-color: #fff;
-  background: url(../img/gc-icons2.png) center top repeat;
+  background: url(img/gc-icons2.png) center top repeat;
   color: var(--color-black);
 }
 
