Delete margin from pagination block

--- a/css/grid.css
+++ b/css/grid.css
@@ -119,7 +119,7 @@ footer img { max-height: 14px; }
   flex-wrap: wrap;
 }
 
-.pagination { margin-bottom: 25px; }
+/*.pagination { margin-bottom: 25px; }*/
 
 .product {
   width: 150px;
